tests/lean/file_not_found.lean.expected.out

file_not_found.lean:6:0: error: no such file or directory (error code: 2)
  file: non-existent-file.txt

file_not_found.lean:7:0: error: permission denied (error code: 13)
  file: readonly.txt

file_not_found.lean:12:0: error: permission denied (error code: 13)
  file: readonly.txt

file_not_found.lean:13:0: error: permission denied (error code: 13)
  file: readonly.txt
